<resources>
    <string name="app_name">Nhà sách Phương Nam</string>
    <string name="splash_remember">Ghi nhớ</string>
    <string name="splash_forgotpass">Quên mật khẩu?</string>
    <string name="login">Đăng Nhập</string>
    <string name="loginfb">Kết nối với Facebook</string>
    <string name="hintemail">Nhập tài khoản email</string>
    <string name="hintpass">Nhập mật khẩu</string>
    <string name="or">hoặc</string>
    <string name="splash_sign_up">Chưa có tài khoản ? <u>Đăng ký</u></string>
    <string name="item1">Quản lý người dùng</string>
    <string name="item2">Quản lý sách tồn kho</string>
    <string name="item3">Quản lý hóa đơn</string>
    <string name="item4">Thống kê doanh số</string>
    <string name="item5">Sách bán chạy</string>
    <string name="item6">Thông tin</string>
    <string name="item7">Đăng xuất</string>
    <string name="item1_2">Thông tin người dùng</string>
    <string name="item1_3">Lấy lại mật khẩu</string>
    <string name="item3_1">Hóa đơn nhập</string>
    <string name="item3_2">Hóa đơn bán</string>
    <string name="nhalanhdao">Nhà lãnh đạo 4.0</string>
    <string name="theloai">Thể loại: Kinh doanh</string>
    <string name="gia">Giá: 53.000 VNĐ</string>
    <string name="menuSua">Sửa</string>
    <string name="menuXoa">Xóa</string>
    <string name="tenbianhalanhdao">Nhà lãnh đạo 4.0</string>
    <string name="tacgia">Tác giả:<b> Harvard Business Review</b></string>
    <string name="theloaisach">Thể loại: <b>Kinh doanh</b></string>
    <string name="giasach65k">Giá bán: <b>65.000 VNĐ</b></string>
    <string name="muangay">Mua ngay</string>
    <string name="dungbankhichuaduocgia">Đừng bán khi chưa được giá</string>
    <string name="nhapsdt">Vui lòng nhập số điện thoại (có 10 chữ số)</string>
    <string name="nhapsdtinput">Nhập số điện thoại</string>
    <string name="nhapemail">Nhập email</string>
    <string name="vuilongnhapemail">Vui lòng nhập email (đúng định dạng)</string>
    <string name="vuilongnhapten">Vui lòng nhập tên (có dấu)</string>
    <string name="nhaphote">Nhập họ tên</string>
    <string name="nhapten">Nhập tên</string>
    <string name="nhapmatkhau">Nhập mật khẩu</string>
    <string name="vuilongmatkhau">Vui lòng nhập mật khẩu (trên 8 ký tự)</string>
    <string name="xacnhanlaimatkhau">Xác nhận lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="sdt">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="hoten">Họ tên</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangkys">Đăng Ký</string>
    <string name="tentheloai">Tên thể loại</string>
    <string name="tensach">Tên sách</string>
    <string name="tentacgia">Tác giả</string>
    <string name="giasach">Giá sách</string>
    <string name="them">Thêm</string>
    <string name="theloaikinhdoanh">Thể loại: Kinh doanh</string>
    <string name="tensachdungbankhichuaduocgia">Tên sách: Đừng bán khi không được giá</string>
    <string name="ngaynhap">Ngày nhập: 10/3/2019</string>
    <string name="soluongnhap">Số lượng nhập: 20</string>
    <string name="giasach65">Giá sách: 65.000 VNĐ</string>
    <string name="theloaiedt">Thể loại</string>
    <string name="ngaynhapedt">Ngày nhập</string>
    <string name="vuilongnhaptensach">Vui lòng nhập tên sách (có dấu)</string>
    <string name="vuilongnhaptheloai">Vui lòng nhập thể loại (có dấu)</string>
    <string name="vuilongngay">Vui lòng nhập ngày (đúng định dạng)</string>
    <string name="vuilongnhapsoluong">Vui lòng nhập số lượng</string>
    <string name="vuilongnhapgia">Vui lòng nhập giá (lớn hơn 0)</string>
    <string name="gianhap">Giá nhập</string>
    <string name="soluongedt">Số lượng</string>
    <string name="ngayban">Ngày bán: 10/4/2019</string>
    <string name="gianhaph65">Giá nhập: 65.000 VNĐ</string>
    <string name="soluongban">Số lượng bán: 20</string>
    <string name="giaban70">Giá bán: 70.000 VNĐ</string>
    <string name="ngaynhap_dialog">Ngày</string>
    <string name="giadialog">Giá</string>
    <string name="soluongedts">Số lượng nhập</string>
    <string name="vuilongngayban">Ngày bán</string>
    <string name="ngaybanedt">Ngày bán</string>
    <string name="giaban">Giá bán</string>
    <string name="soluongbanedts">Số lượng bán</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="luu">Lưu</string>
    <string name="laylaimatkhau">Lấy lại mật khẩu</string>
    <string name="nd">Vui lòng cung cấp email đăng nhập để lấy lại mật khẩu</string>
    <string name="theongay">Theo ngày</string>
    <string name="theothang">Theo tháng</string>
    <string name="theotuan">Theo tuần</string>
    <string name="tienthu">Tiền thu: 1.000.000 VNĐ</string>
    <string name="ngay">Ngày: 20/9/2019</string>
    <string name="thongtin">Cảm ơn bạn đã tin tưởng vào sử dụng app quản lý sách của chúng tôi</string>
    <string name="giasachs">Giá sách: </string>
    <string name="saunamk">65.000 VNĐ</string>
    <string name="kinhdoanh">Kinh doanh</string>
    <string name="theloaisachs">Thể loại:</string>

</resources>
