<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:title="@string/item1"
        app:showAsAction="never">
        <menu>
            <item
                android:title="@string/item1_2"
                app:showAsAction="never"/>
            <item
                android:title="@string/item1_3"
                app:showAsAction="never"/>
        </menu>

    </item>
    <item
        android:title="@string/item2"
        app:showAsAction="never" />
    <item
        android:title="@string/item3"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/hoadonnhap"
                android:title="@string/item3_1"
                app:showAsAction="never"/>
            <item
                android:title="@string/item3_2"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:title="@string/item4"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSachbanchay"
        android:title="@string/item5"
        app:showAsAction="never" />
    <item
        android:title="@string/item6"
        app:showAsAction="never" />
    <item
        android:title="@string/item7"
        app:showAsAction="never" />
    <item
        app:showAsAction="always"
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView" />
</menu>